<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_events"
            android:icon="@drawable/ic_drawer_home"
            android:title="@string/home_menu_events" />
        <item
            android:id="@+id/nav_home_profile"
            android:icon="@drawable/ic_drawer_info"
            android:title="@string/home_menu_profile" />
        <item
            android:id="@+id/nav_home_admin"
            android:icon="@drawable/ic_drawer_admin"
            android:title="@string/home_menu_admin" />
        <item
            android:id="@+id/nav_home_settings"
            android:icon="@drawable/ic_drawer_settings"
            android:title="@string/home_menu_settings" />
    </group>

    <item
        android:id="@+id/nav_home_logout"
        android:icon="@drawable/ic_drawer_logout"
        android:title="@string/home_menu_logout" />

</menu>
